--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Ubuntu', sans-serif; /* Use Ubuntu font */
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #74ebd5, #ACB6E5); /* Soft gradient from teal to light blue */
+          
             color: #333;
             min-height: 100vh;
             display: flex;
@@ -25,7 +25,6 @@
         h1 {
             text-align: center;
             margin-bottom: 30px;
-            color: #fff;
             font-size: 2.5em;
         }
 
@@ -58,6 +57,17 @@
 
         tr:hover {
             background-color: #f1f1f1;
+        }
+
+        /* Links styling */
+        a {
+            color: #4A90E2;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
 
         /* Responsive Design */
@@ -110,6 +120,23 @@
             <td>Pharm-D</td>
         </tr>
     </table>
+
+    <!-- Added Links Section -->
+    <p style="text-align:center;">
+        <strong>This web link: </strong> 
+        <a href="https://moon334-coder.github.io/Work1/" target="_blank">
+            https://moon334-coder.github.io/Work1/
+        </a>
+    </p>
+
+    <p style="text-align:center;">
+        <strong>Google: </strong> 
+        <a href="https://www.google.com" target="_blank">Google</a>
+    </p>
+    <p style="text-align:center;">
+        <strong>Facebook: </strong> 
+        <a href="https://www.facebook.com" target="_blank">Google</a>
+    </p>
 
 </body>
 </html>
